--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
 
             </tr>
             <tr>
-                <td>Осаго</td>
+                <td>КАСКО</td>
                 <td>
                     <select name="" id="">
                         <option value="" selected>На 1 год</option>
@@ -556,7 +556,7 @@
 
             </tr>
             <tr>
-                <td>Расширенная страховка</td>
+                <td>Продленная гарантия</td>
                 <td>
                     <select name="" id="">
                         <option value="">На 1 год</option>
@@ -572,7 +572,7 @@
 
             </tr>
             <tr>
-                <td>Осаго</td>
+                <td>Secure PLUS</td>
                 <td>
                     <select name="" id="">
                         <option value="" selected>Нет</option>
@@ -584,6 +584,23 @@
                 <td class="text-right">—</td>
                 <td class="text-right sale"></td>
                 <td class="text-right">—</td>
+
+
+            </tr>
+
+            <tr>
+                <td>Защита платежей</td>
+                <td>
+                    <select name="" id="">
+                        <option value="">На 1 год</option>
+                        <option value="" selected>На 2 года</option>
+                        <option value="">На 3 года</option>
+                    </select>
+
+                </td>
+                <td class="text-right"><input value="18 000" type=""/> руб.</td>
+                <td class="text-right sale"></td>
+                <td class="text-right">750 руб/мес.</td>
 
 
             </tr>
