fix product name

--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
         <div class="span3 ng-class: {selected: currentOfferListPage.currentIndex == $index}"
              ng-repeat="offer in currentOfferListPage.currentPage"
              ng-click="setCurrentOffer($index)">
-            <h4 tooltip="{{ offer.name }}">{{ offer.name }}</h4>
+            <h4 tooltip="{{ offer.product.name }}">{{ offer.product.name }}</h4>
             <span>
                 {{ offer.carMonthPayment }} руб/мес<br/>
                 <strong>{{ offer.months }} мес.</strong>
