--- a/index.html
+++ b/index.html
@@ -643,15 +643,7 @@
     </section>
 
 
-    <div class="noprint price-line-container">
-        <div class="price-line noprint" id="offerPrice">
-            <h3>Ежемесячный платеж: {{ calculation.offer.carMonthPayment }} + {{ calculation.offer.serviceMonthPayment
-                }}
-                = </h3>
 
-            <div class="price">{{ calculation.offer.monthPayment }} руб/мес</div>
-        </div>
-    </div>
 
 
     <section class="end-offer">
@@ -745,6 +737,17 @@
 
         <a class="btn-big noprint" href="#">Оформить</a>
     </section>
+
+
+    <div class="noprint price-line-container">
+        <div class="price-line noprint" id="offerPrice">
+            <h3>Ежемесячный платеж:
+                = </h3>
+
+            <div class="price" tooltip="Платеж за машину — {{ calculation.offer.carMonthPayment }} руб.
+Платеж за сервисы — {{ calculation.offer.serviceMonthPayment }} руб.">{{ calculation.offer.monthPayment }} руб/мес</div>
+        </div>
+    </div>
 
 </div>
 </article>
@@ -971,7 +974,7 @@
 
 
     $("#carPrice").followTo(0, 60, 44);
-    $("#offerPrice").followTo(0, 104, 0);
+    //$("#offerPrice").followTo(0, 104, 0);
 
 
     $("tr.collapsible").click(function () {
