--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
     <div class="price-line noprint" id="carPrice">
         <h3>{{data.calculation.car.mark.name}} {{data.calculation.car.model.name}}</h3>
 
-        <div class="price">{{data.calculation.car.pack.price}} руб</div>
+        <div class="price">{{data.calculation.car.pack.price |  number:0}} руб</div>
         <a href="#discountModal" class="icon-info-sign" data-toggle="modal"></a>
     </div>
 </div>
@@ -546,7 +546,7 @@
                     </select>
                 </td>
                 <td class="text-right">{{ group.selected.price | number:0 }} руб.</td>
-                <td class="text-right sale">— {{ group.selected.discount | number:0 }} руб.</td>
+                <td class="text-right sale"><span ng-show="group.selected.discount>0">—{{ group.selected.discount | number:0 }} руб.</span></td>
                 <td class="text-right"> {{ (group.selected.price/calculation.offer.months) | number:0 }}
                     руб/мес.
                 </td>
@@ -563,16 +563,6 @@
         </table>
     </section>
 
-
-    <div class="noprint price-line-container">
-        <div class="price-line noprint" id="offerPrice">
-            <h3>Ежемесячный платеж: {{ calculation.offer.carMonthPayment }} + {{ calculation.offer.serviceMonthPayment
-                }}
-                = </h3>
-
-            <div class="price">{{ calculation.offer.monthPayment }} руб/мес</div>
-        </div>
-    </div>
 
 
     <section class="end-offer">
@@ -670,11 +660,10 @@
 
     <div class="noprint price-line-container">
         <div class="price-line noprint" id="offerPrice">
-            <h3>Ежемесячный платеж:
-                = </h3>
+            <h3>Ежемесячный платеж:</h3>
 
             <div class="price" tooltip="Платеж за машину — {{ calculation.offer.carMonthPayment }} руб.
-Платеж за сервисы — {{ calculation.offer.serviceMonthPayment }} руб.">{{ calculation.offer.monthPayment }} руб/мес</div>
+Платеж за сервисы — {{ calculation.offer.serviceMonthPayment }} руб.">{{ calculation.offer.monthPayment | number:0 }} руб/мес</div>
         </div>
     </div>
 
