--- a/index.html
+++ b/index.html
@@ -575,20 +575,44 @@
                 <td>руб.</td>
             </tr>
             <tr class="header">
-                <td>Срок кредита</td>
+                <td>Срок</td>
                 <td>12</td>
                 <td>мес</td>
+            </tr>
+            <tr class="header">
+                <td>Цена автомобиля</td>
+                <td>560 000</td>
+                <td>руб</td>
+            </tr>
+            <tr class="header">
+                <td>Остаточный платеж</td>
+                <td>560 000</td>
+                <td>руб</td>
             </tr>
             <tr class="header">
                 <td>Процентная ставка</td>
                 <td>9.00</td>
                 <td>%</td>
             </tr>
-            <tr class="header">
-                <td>Стоимость автомобиля</td>
-                <td>560 000</td>
-                <td>руб</td>
+
+
+            <tr class="header collapsible">
+                <td>Первоначальный взнос</td>
+                <td>123 000</td>
+                <td>руб.</td>
             </tr>
+            <tr style="display:none">
+                <td>—наличными</td>
+                <td>100 000</td>
+                <td>руб.</td>
+            </tr>
+            <tr style="display:none">
+                <td>—трейд-ин</td>
+                <td>20 000</td>
+                <td>руб.</td>
+            </tr>
+
+
             <tr class="header collapsible">
                 <td>Дополнительные&nbsp; сервисы</td>
                 <td>197 640</td>
@@ -614,26 +638,7 @@
                 <td>24 000</td>
                 <td>руб.</td>
             </tr>
-            <tr class="header collapsible">
-                <td>Первоначальный платеж</td>
-                <td>123 000</td>
-                <td>руб.</td>
-            </tr>
-            <tr style="display:none">
-                <td>—наличными</td>
-                <td>100 000</td>
-                <td>руб.</td>
-            </tr>
-            <tr style="display:none">
-                <td>—трейд-ин</td>
-                <td>20 000</td>
-                <td>руб.</td>
-            </tr>
-            <tr style="display:none">
-                <td>—рефинансирование</td>
-                <td>3 000</td>
-                <td>руб.</td>
-            </tr>
+
 
 
             <tr class="header collapsible">
