--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
                 <th class="text-right">Скидка</th>
                 <th class="text-right">Платеж</th>
             </tr>
-            <tr ng-repeat="group in calculation.offer.services.grouplist">
+            <tr class="service" ng-repeat="group in calculation.offer.services.grouplist">
                 <td>{{ group.name }}</td>
                 <td>
                     <select ng-model="group.selected"
@@ -562,17 +562,6 @@
             </tr>
         </table>
     </section>
-
-
-    <div class="noprint price-line-container">
-        <div class="price-line noprint" id="offerPrice">
-            <h3>Ежемесячный платеж: {{ calculation.offer.carMonthPayment }} + {{ calculation.offer.serviceMonthPayment
-                }}
-                = </h3>
-
-            <div class="price">{{ calculation.offer.monthPayment }} руб/мес</div>
-        </div>
-    </div>
 
 
     <section class="end-offer">
