--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
 
     <section class="credit-filter filter row-fluid" ng-show="car.pack">
         <div class="span6 input-ip">
-            <label>Первоначальный взнос — {{ initialPaymentPercent }} %</label>
+            <label>Взнос наличными — {{ initialPaymentPercent }} %</label>
 
             <div class="input"><input ng-model="parameters.initialPayment"><label> руб.</label></div>
             <div slider ng-model="parameters.initialPayment" max="car.pack.price" min="0" step="1000"
@@ -505,7 +505,7 @@
 
     <section class="credit-offers row-fluid list" ng-show="currentOfferList">
 
-        <div class="span3 ng-class: {selected: currentOfferListPage.currentIndex == $index}"
+        <div class="span3 ng-class: {selected: calculation.offerIndex == $index}"
              ng-repeat="offer in currentOfferListPage.currentPage"
              ng-click="setCurrentOffer($index)">
             <h4 tooltip="{{ offer.product.name }}">{{ offer.product.name }}</h4>
