--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
                 <span>Расчет платежноспособности</span>
                 <dl>
                     <dt>max платеж</dt>
-                    <dd>{{client.maxMonthPayment | currency }}</dd>
+                    <dd>{{client.maxMonthPayment | number:0  }} руб.</dd>
                     <dt>max кредит</dt>
-                    <dd>{{client.maxCreditValue | currency }}</dd>
+                    <dd>{{client.maxCreditValue | number:0  }} руб.</dd>
                 </dl>
                 <i></i>
             </li>
@@ -60,7 +60,7 @@
 {{calculation.car.pack.name}}">
                     <img ng-src="img/cars/{{ calculation.car.model.img }}" height="50"/>
                     <strong>{{calculation.car.mark.name}} {{calculation.car.model.name}}</strong>
-                    <span>{{ calculation.offer.monthPayment }} руб/мес.</span>
+                    <span>{{ calculation.offer.monthPayment |number:0  }} руб/мес.</span>
                 </div>
                 <a href="" class="icon-remove" ng-click="delCalculation($index)"></a>
                 <!--<i></i>-->
@@ -667,8 +667,8 @@
         <div class="price-line noprint" id="offerPrice">
             <h3>Ежемесячный платеж:</h3>
 
-            <div class="price" tooltip="Платеж за машину — {{ calculation.offer.carMonthPayment }} руб.
-Платеж за сервисы — {{ calculation.offer.serviceMonthPayment }} руб.">{{ calculation.offer.monthPayment | number:0 }} руб/мес</div>
+            <div class="price" tooltip="Платеж за машину — {{ calculation.offer.carMonthPayment |number:0 }} руб/мес.
+Платеж за сервисы — {{ calculation.offer.serviceMonthPayment |number:0  }} руб/мес.">{{ calculation.offer.monthPayment | number:0 }} руб/мес.</div>
         </div>
     </div>
 
